--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--[if It IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <--![endif]-->
+    <[endif]-->
 </head>
 
 <body>
