--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Mon CV</title>
     <meta name="description" content="A propos de moi">
@@ -12,75 +12,85 @@
     <!--[if It IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <[endif]-->
+    <link rel="stylesheet" href="css/resume.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
+    <script src="//use.edgefonts.net/megrim.js"></script>
 </head>
 
+
+
 <body>
-    <img src="https://avatars0.githubusercontent.com/u/24410378?s=460&v=4">
-    <h1>EL OMRI Jabir</h1>
-    <h2>Prépare un Master 2 en Developppement Logiciel et Systèmes Informatiques</h2>
-    <h5>2 Rue des Archives, Brest</h4>
-        <h5>elomri.jabir.1@gmail.com</h4>
-            <h5>0662645221</h4>
 
-                <article>
-                    <h3>Presentation</h3>
-                    Culture scientifique diversifiée (informatique, électricité, thermique,
-                    mécanique, optique, chimie, métrologie, qualité) avec spécialisation en
-                    génie logiciel (analyse des besoins, conception, construction, gestion de
-                    projet).
-                </article>
-
-                <article>
-                    <h3>Expérience</h3>
-                    <dt>2017</dt>
-                    <dd>Finaliste parmis les 30 meilleurs jeunes entrepreneurs sociaux du Maroc
-                        durant le bootcamp organisé par le British Council.</dd>
-                    <dt>​2016</dt>
-                    <dd>Co-fondateur et gérant de projet à bcamart.com. Plateforme de consulting à l’origine, nous nous
-                        sommes dirigés par la
-                        suite vers la création de sites webs et le développement d’application
-                        pour le marché marocain.
-                    </dd>
+    <header>
+        <img src="https://avatars0.githubusercontent.com/u/24410378?s=460&v=4">
+        <h1>EL OMRI Jabir</h1>
+        <h2>Prépare un Master 2 en Developppement Logiciel et Systèmes d'Informations</h2>
+        <h5>2 Rue des Archives, Brest</h4>
+            <h5>elomri.jabir.1@gmail.com</h4>
+                <h5>0662645221</h4>
+    </header>
 
 
-                </article>
-                <article>
-                    <h3>Formation</h3>
-                    <dl>
-                        <dt>2017</dt>
-                        <dd>Licence en Sciences et Techniques : Génie Informatique</dd>
-                        <dt>2016</dt>
-                        <dd>​Diplôme d’Etudes Universitaires et Techniques : Mathématiques, Informatique, Physique,
-                            Chimie</dd>
+    <div id="wrapper">
+        <article>
+            <h3>Presentation</h3>
+            Culture scientifique diversifiée (informatique, électricité, thermique,
+            mécanique, optique, chimie, métrologie, qualité) avec spécialisation en
+            génie logiciel (analyse des besoins, conception, construction, gestion de
+            projet).
+        </article>
 
-                    </dl>
-                </article>
-                <article>
-                    <h3>Langues</h3>
-                    <ul>
-                        <li>Arabe natif</li>
-                        <li>Français Bilingue</li>
-                        <li>Anglais Confirmé : Certification C1 IELTS</li>
-                        <li>Espagnol débutant : Certification A2</li>
-                    </ul>
-                </article>
-
+        <article>
+            <h3>Expérience</h3>
+            <dt>2017</dt>
+            <dd>Finaliste parmis les 30 meilleurs jeunes entrepreneurs sociaux du Maroc
+                durant le bootcamp organisé par le British Council.</dd>
+            <dt>​2016</dt>
+            <dd>Co-fondateur et gérant de projet à bcamart.com. Plateforme de consulting à l’origine, nous nous
+                sommes dirigés par la
+                suite vers la création de sites webs et le développement d’application
+                pour le marché marocain.
+            </dd>
 
 
-                <div id="wrapper"></div>
+        </article>
+        <article>
+            <h3>Formation</h3>
+            <dl>
+                <dt>2017</dt>
+                <dd>Licence en Sciences et Techniques : Génie Informatique</dd>
+                <dt>2016</dt>
+                <dd>​Diplôme d’Etudes Universitaires et Techniques : Mathématiques, Informatique, Physique,
+                    Chimie</dd>
 
-                <footer>
-                    <h3>Liens</h3>
-                    <dl>
-                        <dt>LinkedIn : https://www.linkedin.com/in/jabir-el-omri-75007a139/</dt>
-                        <dd>Pour rejoindre mon réseau profesionnel</dd>
-                        <dt>Github : https://github.com/jabir-el-omri</dt>
-                        <dd>​Pour suivre les projets sur lesquels je travaille </dd>
+            </dl>
+        </article>
+        <article>
+            <h3>Langues</h3>
+            <ul>
+                <li>Arabe natif</li>
+                <li>Français Bilingue</li>
+                <li>Anglais Confirmé : Certification C1 IELTS</li>
+                <li>Espagnol débutant : Certification A2</li>
+            </ul>
+        </article>
+    </div>
 
-                    </dl>
+    <footer>
+        <i class="icon-camera-retro"></i>
+        <h3>Liens</h3>
+        <dl>
+            <dt><a href="https://www.linkedin.com/in/jabir-el-omri-75007a139">LinkedIn</a>
+
+            </dt>
+            <dd>Pour rejoindre mon réseau profesionnel</dd>
+            <dt><a href="https://github.com/jabir-el-omri">GitHub</a> </dt>
+            <dd>​Pour suivre les projets sur lesquels je travaille </dd>
+
+        </dl>
 
 
-                </footer>
+    </footer>
 
 </body>
 
