--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/resume.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.min.css">
     <script src="//use.edgefonts.net/megrim.js"></script>
+    <link rel="stylesheet" href="css/responsive.css"/>
 </head>
 
 
