--- a/ubo-resume.html
+++ b/ubo-resume.html
@@ -26,8 +26,8 @@
         <img src="https://avatars0.githubusercontent.com/u/24410378?s=460&v=4">
         <h1 itemprop="givenName">EL OMRI Jabir</h1>
         <h2>Prépare un Master 2 en Developppement Logiciel et Systèmes d'Informations</h2>
-        <h5>2 Rue des Archives, Brest</h4>
-            <h5>elomri.jabir.1@gmail.com</h4>
+        <h5 itemprop="address">2 Rue des Archives, Brest</h4>
+            <h5 itemprop="email">elomri.jabir.1@gmail.com</h4>
                 <h5>0662645221</h4>
     </header>
 
